# FunVIP

./: .gitignore  DB_documentation.txt  Documentation.md  MANIFEST.in  README.md  build_manual.md  meta.yaml  pyproject.toml  setup.cfg  setup.py
FunIP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
conda/: meta.yaml
docs/source/: conf.py  funid.data.rst  funid.rst  funid.src.rst  modules.rst
funid/: FunID.yaml  FunID_GUI.py  main.py  meta.yaml  metal.yaml
funid/FunID.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
funid/preset/: accurate.yaml  fast.yaml
funid/src/: align.py  cluster.py  command.py  concatenate.py  dataset.py  ext.py  hasher.py  initialize.py  logics.py  manage_input.py  modeltest.py  multigene.py  ncbi.py  opt_generator.py  patch.py  reporter.py  save.py  search.py  tool.py  tree.py  tree_interpretation.py  tree_interpretation_pipe.py  trim.py  validate_option.py  visualize.py
funid/test_dataset/penicillium/: preset.yaml
funid/test_dataset/penicillium/DB/: DB_Penicillium.xlsx
funid/test_dataset/penicillium/Query/: Query.xlsx
funid/test_dataset/terrei/: preset.yaml
funid/test_dataset/terrei/DB/: FunID_Aspergillus_db.xlsx
funip/: DB_documentation.txt  FunID_Windows.yaml  FunIP_GUI.py  FunIP_Windows.yaml  main.py
funip/src/: align.py  cluster.py  command.py  concatenate.py  dataset.py  ext.py  initialize.py  logger.py  manage_input.py  modeltest.py  reporter.py  save.py  search.py  tool.py  tree.py  tree_interpretation.py  tree_interpretation_pipe.py  trim.py  validate_option.py  validation.py  version.py
funip/test_dataset/terrei/Query/: FunID_Aspergillus_query.xlsx
funvip/: FunVIP.yaml  FunVIP_GUI.py  FunVIP_Windows.yaml  download_tmp  main.py  meta.yaml  package-lock.json  package.json
funvip/FunVIP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
funvip/data/: Option_manager.xlsx  genus_line.txt
funvip/preset/: accurate.yaml  fast.yaml
funvip/src/: align.py  cluster.py  command.py  concatenate.py  dataset.py  ext.py  hasher.py  initialize.py  logger.py  logics.py  manage_input.py  modeltest.py  ncbi.py  opt_generator.py  patch.py  reporter.py  save.py  search.py  tool.py  tree.py  tree_interpretation.py  tree_interpretation_pipe.py  trim.py  validate_input.py  validate_option.py  version.py  visualize.py
funvip/src/templates/: template.html
funvip/test_dataset/penicillium/: Options.config  preset.yaml
funvip/test_dataset/penicillium/DB/: DB_Penicillium.xlsx
funvip/test_dataset/sanghuangporus/: preset.yaml
funvip/test_dataset/sanghuangporus/DB/: FunVIP_Sanghuangporus_db.xlsx
funvip/test_dataset/sanghuangporus/Query/: FunVIP_Sanghuangporus_query.xlsx
funvip/test_dataset/terrei/: preset.yaml
legacy/: legacy_setup.py
source/: conf.py  index.rst
tutorial/: FunID_Aspergillus_db.xlsx  FunVIP_Aspergillus_db.xlsx  FunVIP_Aspergillus_query.xlsx  advanced.md  development.md  installation.md  tutorial.md  tutorial2.md
