[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FunVIP"
description = "Fungal Validation & Identification Pipeline"
authors = [
    { name = "Changwan Seo", email = "wan101010@snu.ac.kr" }
]
version = "0.3.20"
requires-python = "<3.13, >3.8"
license = {text = "GPL-3.0"}
include = ["funvip"]
readme = "README.md"
dependencies = [
    "biopython==1.78",
    "ete3==3.1.3",
    "Cython",
    "dendropy",
    "GenMine>=1.0.13",
    "lxml",
    "matplotlib",
    "numpy",
    "openpyxl==3.0.9",
    "pandas==1.4.2",
    "plotly==5.9.0",
    "psutil",
    "pyyaml",
    "sip>=4.19.4",
    "scikit-learn",
    "scipy",
    "tabulate",
    "unidecode==1.2.0",
    "xlrd==2.0.1",
    "xlsxwriter",
    "xmltodict==0.12.0",
    'PyQt5>=5.9.2; sys_platform != "Darwin"'
]
Obsoletes-Dist = "FunID"

[tool.filt.module]
module = "funvip"

[project.urls]
Source = "https://github.com/Changwanseo/FunVIP"

[project.scripts]
FunID = "funvip.main:main"
FunVIP = "funvip.main:main"
