[project]
name = "FunVIP"
version = "0.5.2"
description = "Fungal Validation & Identification Pipeline"
authors = [{name = "Changwan Seo", email = "wan101010@snu.ac.kr"}]
urls = { "Homepage" = "https://github.com/Changwanseo/FunVIP" }
requires-python = ">=3.9, <3.13"
license = {text = "GPL-3.0"}
dependencies = [
    "biopython==1.84",
    "ete3==3.1.3",
    "Cython",
    "contourpy<1.3",
    "dendropy",
    "GenMine>=1.3.0, <1.5.0",
    "lxml",
    "matplotlib",
    "numpy<2.0.0",
    "openpyxl==3.1.0",
    "pandas==2.2.2",
    "psutil",
    "pyyaml",
    "sip>=4.19.4",
    "scikit-learn",
    "scipy",
    "tabulate",
    "unidecode==1.2.0",
    "xlrd==2.0.1",
    "xlsxwriter",
    "xmltodict==0.12.0",
    "PyQt5>=5.15.0; sys_platform!='darwin'",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
FunID = "funvip.main:main"
FunVIP = "funvip.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["funvip", "funvip.src", "funvip.external", "funvip.data", "funvip.preset", "funvip.test_dataset" ]

[tool.setuptools.package-data]
funvip = ["data/*", "external/*", "preset/*", "src/*", "test_dataset/*"]


[build-system]
requires = ["setuptools", "setuptools-ext", "wheel"]
build-backend = "setuptools_ext"

[metadata]
obsoletes-dist = "FunID"


