[metadata]
name = FunVIP
version = 0.3.20
description = Fungal Validation & Identification Pipeline
author = Changwan Seo
author_email = wan101010@snu.ac.kr
url = https://github.com/Changwanseo/FunVIP
license = GPL3

[options]
python_requires = >3.8, <3.13
packages = find:
zip_safe = False
include_package_data = True

[options.packages.find]
where = .

[options.package_data]
funvip.data =
    *.xlsx
    *.txt
funvip.test_dataset =
    **
funvip.preset =
    **

[options.install_requires]
install_requires =
    biopython==1.78
    ete3==3.1.3
    Cython
    dendropy
    GenMine>=1.0.13
    lxml
    matplotlib
    numpy
    openpyxl==3.0.9
    pandas==1.4.2
    plotly==5.9.0
    psutil
    pyyaml
    sip>=4.19.4
    scikit-learn
    scipy
    tabulate
    unidecode==1.2.0
    xlrd==2.0.1
    xlsxwriter
    xmltodict==0.12.0

[options.entry_points]
console_scripts =
    FunID = funvip.main:main
    FunVIP = funvip.main:main

[obsoletes]
dist = FunID